@@ -1,3 +1,11 @@
+2007-02-20  Zoran Vasiljevic <vasiljevic@users.sourceforge.net>
+
+	* nsproxy/nsproxylib.c: Uses ns_poll instead of poll.
+	* configure.in: Simplified calculation of TCL_LIB
+	* nsd/connio.c: Removed definition of UIO_MAXIOV
+	* nsd/nsd.h: Added platform-specific def of UIO_MAXIOV.
+	If not defined, assume 16.
+
 2007-02-19  Vlad Seryakov  <seryakov@users.sf.net>
 
 	* nsd/adprequest.c:
